# pong

./: Cargo.toml  README.md  build.rs  notes.md
src/: aur.rs  cli.rs  command.rs  generate.rs  main.rs  subcmd.rs  tests.rs
src/subcmd/: gen.rs
