[package]
name = "pong"
version = "0.1.0"
edition = "2021"
description = "A sane wrapper for the pacman CLI."
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.3.0", features = ["color", "derive", "error-context", "help", "std", "usage", "wrap_help"], default_features = false }
sudo = "0.6.0"
