[package]
name = "pong"
version = "0.1.0-dev"
edition = "2021"
description = "A self-documenting CLI wrapper for Arch Linux package management."
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

# TODO: Specify clap dependency in one place

[build-dependencies]
clap = { version = "4.3.0", features = ["color", "derive", "error-context", "help", "std", "usage", "wrap_help"], default_features = false }
clap_complete = "4.5.1"
clap_complete_nushell = "4.5.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.3.0", features = ["color", "derive", "error-context", "help", "std", "usage", "wrap_help"], default_features = false }
sudo = "0.6.0"
